test/spec_vectors/simd_i16x8_arith2/fail/module_14.wat
(module (func $i16x8.max_s-arg-empty (result v128) (i16x8.max_s)))